@@ -4,4 +4,15 @@
 * support wordsize conversion
 * support complex arithmetic expression by using reverse polish notion.
 
+Compile:
+
+```
+javac --module-path $MODULEPATH --add-modules javafx.controls Calculator.java 
+```
+
+Run:
+```
+java --module-path $MODULEPATH --add-modules javafx.controls Calculator
+```
+
 ![demonstration](img/demonstration.png)
